tests/compile/fail/hegel_test_zero_params.stderr
error: #[hegel::test] functions must take exactly one parameter of type hegel::TestCase.
 --> tests/compile/fail/hegel_test_zero_params.rs:2:1
  |
2 | fn main() {}
  | ^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compile/fail/hegel_test_zero_params.rs:2:13
  |
2 | fn main() {}
  |             ^ consider adding a `main` function to `$DIR/tests/compile/fail/hegel_test_zero_params.rs`
